--- a/app/views/gadgets/index.html.erb
+++ b/app/views/gadgets/index.html.erb
@@ -1,4 +1,3 @@
-<!--search engin -->
 
 <div class="col-md-8 col-xs-5 col-md-offset-0">
       <div class="thumbnail">
@@ -28,8 +27,6 @@
       </div>
   </div>
 
-<!-- end search engin -->
-
 
 
 <div class="container-fluid">
@@ -48,16 +45,10 @@
           </div>
           <table class="table table-striped table-hover">
             <tr>
-              <!-- <th>Gadget/App</th>
+            <th>Gadget/App</th>
               <th>Name of the tool ▲</th>
               <th>Analysis group(s)</th>
-              <th>Actions</th> -->
-
-              <th>Tile</th>
-              <th>Outcome</th>
-              <th>Description</th>
-              <th>fee</th>
-              <th>Actions</th>
+              <th>Actions</th> 
               <th colspan="3" class="text-center"></th>
             </tr>
                 <% if @courses.blank? %> 
