--- a/app/views/gadgets/index.html.erb
+++ b/app/views/gadgets/index.html.erb
@@ -1,79 +1,54 @@
 
-<div class="col-md-8 col-xs-5 col-md-offset-0">
-      <div class="thumbnail">
-        <div class="caption">
-            <form class="form-horizontal">
-              <fieldset>
-                <legend>Gadget Inventory</legend>
-                    <div class="form-group">
-                      <label for="inputEmail">&nbsp&nbspSearch by: Gadget name</label>
-                        <div class="col-lg-10">
-                          <input class="form-control" id="searchname" placeholder="Enter Gadget name" type="text">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                      <label for="analysisgroup">&nbsp&nbspSearch by: Analysis group(s)</label>
-                        <div class="col-lg-10">
-                         <input class="form-control" id="inputPassword" placeholder="Enter Analysis group " type="text">
-                        </div>
-                    </div><hr/>
-                      <div class="form-group">
-                        <div class="col-lg-10 col-lg-offset-2">
-                          <button type="submit" class="btn btn-primary">Search</button>
-                        </div>
-                      </div>
-              </fieldset>
-            </form>
-      </div>
+ <h1>Gadget </h1>
+<%= search_form_for @search do | f | %>
+  <div class="">
+    <%= f.label :title, "Title" %>
+    <%= f.text_field :title_start %>
   </div>
+  <div>
+    <%= f.label :analysis_group, "Search by:Analysis Group" %>
+    <%= f.text_field :analysis_group_start %>
+  </div>
+<%= f.submit "Search" %>
+<% end %>
 
 
 
-<div class="container-fluid">
-  <div class="row">
+<div class="row">
+  <div class="col-md-10" id="padding">
     <div class="col-md-10">
+      <p class="lead"> Gadget Inventory</p> 
       <div class="row">
-        <div class="col-md-9" id="padding">
-          <div class="row">
-            <div class="col-md-10">
-              <p class="lead"> Listing users </p>
-            </div>
-            
-            <div class="col-md-2">
-              <%= link_to 'Add Course',  new_course_path ,:class => 'btn btn-primary' %>
-            </div>
-          </div>
-          <table class="table table-striped table-hover">
-            <tr>
-            <th>Gadget/App</th>
-              <th>Name of the tool ▲</th>
-              <th>Analysis group(s)</th>
-              <th>Actions</th> 
-              <th colspan="3" class="text-center"></th>
-            </tr>
-                <% if @courses.blank? %> 
-                <p> No Courses </p>
-                <% else %>
-                <% @courses.each do |course| %>
-                  <tr>
-                    <td><%= course.title %></td>
-                    <td><%= course.outcome %></td>
-                    <td><%= course.description %></td>
-                    <td><%= course.fee %></td>
-                    <td><%= link_to 'show',course_path(course.id) %></td>
-                    <td><%= link_to 'edit', edit_course_path(course.id) %></td>
-                    <td><%= link_to 'Destroy', course_path(course.id), :method => 'delete' %>
-                  </td>
-                  </tr>
-                <% end %>
-                <% end %>
-          </table>
-          <div  class='col-lg-offset-3'>
-          </div>
-        </div>
+        </br>
       </div>
     </div>
+    <div class="col-md-2">
+      <%= link_to 'ADD GADGET', new_gadget_path, class: 'btn btn-primary' %>
+    </div>
+    <% if !@gadgets.empty? %>
+      <table class="table table-striped table-hover">
+          <tr>
+             <th><%= sort_link @search, :title, "Gadget Title" %></th>
+            <th><%= sort_link @search, :method_or_gadget, "Name of the tool" %></th>
+            <th>Analysis Group(s)</th>
+            <th>Actions</th>
+            <th colspan="3" class="text-center"></th>
+          </tr>
+        <% @gadgets.each do | gadget | %>
+          <tr>
+            <td><%= gadget.title %></td>
+            <td><%= gadget.method_or_gadget %></td>
+            <td><%= gadget.analysis_group %></td>
+            <td><%= link_to 'Show', gadget_path(gadget.id) %></td>
+            <td><%= link_to 'Edit', edit_gadget_path(gadget.id) %></td>
+            <td><%= link_to 'Delete',gadget_path(gadget.id), :method => 'delete' %></td>
+          </tr>
+        <% end %>
+      </table>
+    <% else %>
+      <div class="col-md-10">
+        <p class="text-center"> There are no matched records.</p>
+      </div>
+    <% end %>
   </div>
 </div>
-
-
