--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -183,7 +183,7 @@ table {
 td,
 th {
   padding: 0;
-  background-color: #00FF7F;
+  background-color: #9BDBBB;
 }
 @media print {
   * {
@@ -1467,7 +1467,7 @@ th {
 }
 .table-striped > tbody > tr:nth-child(odd) > td,
 .table-striped > tbody > tr:nth-child(odd) > th {
-  background-color: #6B8E23;
+  background-color: #C6DD97;
 }
 .table-hover > tbody > tr:hover > td,
 .table-hover > tbody > tr:hover > th {
@@ -1644,14 +1644,15 @@ legend {
   margin-bottom: 20px;
   font-size: 21px;
   line-height: inherit;
-  color: #333;
+  color: #B65E7E;
   border: 0;
   border-bottom: 1px solid #e5e5e5;
 }
 label {
   display: inline-block;
-  margin-bottom: 5px;
+  margin-bottom: 1px;
   font-weight: bold;
+  color:#5A44FF;
 }
 input[type="search"] {
   -webkit-box-sizing: border-box;
@@ -2042,22 +2043,24 @@ fieldset[disabled] .btn {
 }
 .btn-default {
   color: #333;
-  background-color: #fff;
-  border-color: #ccc;
+  background-color: #A0A0CF;
+  border-color: #ff0;
 }
 .btn-default:hover,
 .btn-default:focus,
 .btn-default:active,
 .btn-default.active,
 .open .dropdown-toggle.btn-default {
-  color: #333;
-  background-color: #ebebeb;
-  border-color: #adadad;
+  color: green;
+  background-color: #7CD666 ;
+  border-color: chartreuse ;
+
 }
 .btn-default:active,
 .btn-default.active,
 .open .dropdown-toggle.btn-default {
   background-image: none;
+  
 }
 .btn-default.disabled,
 .btn-default[disabled],
@@ -2074,7 +2077,7 @@ fieldset[disabled] .btn-default:active,
 .btn-default.disabled.active,
 .btn-default[disabled].active,
 fieldset[disabled] .btn-default.active {
-  background-color: #fff;
+  background-color: rgb(41, 150, 102);
   border-color: #ccc;
 }
 .btn-default .badge {
@@ -2083,7 +2086,7 @@ fieldset[disabled] .btn-default.active {
 }
 .btn-primary {
   color: #fff;
-  background-color: blue;
+  background-color: rgb(41, 133, 45);
   border-color: #357ebd;
 }
 .btn-primary:hover,
@@ -2092,7 +2095,7 @@ fieldset[disabled] .btn-default.active {
 .btn-primary.active,
 .open .dropdown-toggle.btn-primary {
   color: #fff;
-  background-color: #3276b1;
+  background-color: #5DAA4F;
   border-color: #285e8e;
 }
 .btn-primary:active,
@@ -3655,6 +3658,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 @media (min-width: 768px) {
   .navbar-header {
     float: left;
+    background-color: #C5C;
   }
 }
 .navbar-collapse {
@@ -3679,6 +3683,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
     display: block !important;
     height: auto !important;
     padding-bottom: 0;
+    background-color: black;
     overflow: visible !important;
   }
   .navbar-collapse.in {
@@ -4023,7 +4028,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   color: #333;
 }
 .navbar-inverse {
-  background-color: #222;
+  background-color: rgba(43, 15, 12, 0.7)
   border-color: #080808;
 }
 .navbar-inverse .navbar-brand {
@@ -4403,11 +4408,11 @@ a.list-group-item.active > .badge,
 }
 .thumbnail {
   display: block;
-  padding: 4px;
+  padding: 44px;
   margin-bottom: 20px;
   line-height: 1.42857143;
-  background-color: #fff;
-  border: 1px solid #ddd;
+  background-color: beige;
+  border:#3A88A7;
   border-radius: 4px;
   -webkit-transition: all .2s ease-in-out;
           transition: all .2s ease-in-out;
@@ -4631,7 +4636,7 @@ a.thumbnail.active {
   margin-right: 5px;
 }
 a.list-group-item {
-  background-color: #C71585;
+  background-color: #D33799;
     color: #40E0D0;
 }
 a.list-group-item .list-group-item-heading {
@@ -4640,7 +4645,7 @@ a.list-group-item .list-group-item-heading {
 a.list-group-item:hover,
 a.list-group-item:focus {
   text-decoration: none;
-  background-color: #f5f5f5;
+  background-color: #428bca;
 }
 a.list-group-item.active,
 a.list-group-item.active:hover,
