--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -18,5 +18,10 @@
         </li>
         <li><a href="/users/sign_in">LOGIN</a></li>
       </ul>
-    </div><!-- /.navbar-collapse -->
-  </nav> <br>
+    </div>
+  </nav> <br> 
+
+
+
+
+
