--- a/app/views/application/_sidebar.html.erb
+++ b/app/views/application/_sidebar.html.erb
@@ -1,3 +1,4 @@
+<% if User.nil? %>
 <div class="sidebar-padding">
 	<div class="list-group">
         <%= link_to 'Users', users_admin_index_path, :method => 'get', :class => "list-group-item active"%>
@@ -5,3 +6,6 @@
         <%= link_to 'Gadgets Inventory', gadgets_path, :method =>'get', :class => "list-group-item"%>
     </div>
 </div>
+<% else %>
+  <div>Hai</div>
+<% end %>
