--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -7,18 +7,19 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">English <b class="caret"></b></a>
           <ul class="dropdown-menu">
-            <li><a href="#">German</a></li>
+            <li><a href="#">German</a></li><li><a href="#">German</a></li>
           </ul>
         </li>
       </ul>
       <ul class="nav navbar-nav pull-right">
-        <li>
-        <%= link_to 'New Member Registration', sign_up_users_path, :method => 'get'%>
-        </li>
-        <% if User.nil?  %>
-        <li><a href="/users/sign_out">LOGOUT</a>
-        <% else %><a href="/users/sign_in">LOGIN</a>
-        </li><% end %>
+        <% if user_signed_in? %>
+        <li>Logged in as <strong><%= current_user.email %></strong>.</li>
+        <li><%= link_to 'Edit profile', edit_user_registration_path %> |</li>
+        <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
+        <% else %>
+        <li><%= link_to "Sign up", new_user_registration_path %> |</li>
+        <li><%= link_to "Login", new_user_session_path %></li>
+        <% end %>
       </ul>
     </div>
 </nav> <br> 
