--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -428,6 +428,7 @@ h6,
 .h6 {
   margin-top: 10px;
   margin-bottom: 10px;
+  color: tomato;
 }
 h4 small,
 .h4 small,
@@ -446,6 +447,7 @@ h6 .small,
 h1,
 .h1 {
   font-size: 36px;
+  color: aqua;
 }
 h2,
 .h2 {
@@ -469,7 +471,7 @@ h6,
 }
 p {
   margin: 0 0 10px;
-  color: red;
+  color: blueviolet;
 }
 .lead {
   margin-bottom: 20px;
@@ -3684,7 +3686,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
     display: block !important;
     height: auto !important;
     padding-bottom: 0;
-    background-color: rgb(197, 211, 210);
+    background-color: rgba(134, 129, 116, 0);
     overflow: visible !important;
   }
   .navbar-collapse.in {
@@ -4044,7 +4046,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   color: #999;
 }
 .navbar-inverse .navbar-nav > li > a {
-  color: #999;
+  color: #030000;
 }
 .navbar-inverse .navbar-nav > li > a:hover,
 .navbar-inverse .navbar-nav > li > a:focus {
@@ -4637,8 +4639,8 @@ a.thumbnail.active {
   margin-right: 5px;
 }
 a.list-group-item {
-  background-color: #D33799;
-    color: #40E0D0;
+  background-color: #CFCFE0;
+    color:#662020;
 }
 a.list-group-item .list-group-item-heading {
   color: #333;
