--- a/app/assets/stylesheets/gadgets.css
+++ b/app/assets/stylesheets/gadgets.css
@@ -1,3 +1,8 @@
+@secondColor : #D5BAD3;
+@jWidth: 50%;
+@min_heigh: min-height: 350px;
+min-width: inherit;
+padding: 0px;
 html {
   font-family: sans-serif;
   -webkit-text-size-adjust: 100%;
@@ -1093,7 +1098,7 @@ pre code {
     width: 91.66666667%;
   }
   .col-md-10 {
-    width: 83.33333333%;
+    width: @jWidth;
   }
   .col-md-9 {
     width: 75%;
@@ -4405,8 +4410,8 @@ a.list-group-item.active > .badge,
 .thumbnail {
   display: block;
   padding: 44px;
-  margin-bottom: 20px;
-  line-height: 1.42857143;
+  margin-bottom: 0px;
+  line-height: 1;
   background-color: beige;
   border:#3A88A7;
   border-radius: 4px;
@@ -4428,7 +4433,7 @@ a.thumbnail.active {
   color: #333;
 }
 .alert {
-  padding: 15px;
+  padding: 0px;
   margin-bottom: 20px;
   border: 1px solid transparent;
   border-radius: 4px;
@@ -4999,7 +5004,7 @@ a.list-group-item-danger.active:focus {
   border-bottom-color: #d6e9c6;
 }
 .panel-info {
-  border-color: #bce8f1;
+  border-color: @secondColor;
 }
 .panel-info > .panel-heading {
   color: #31708f;
@@ -5038,18 +5043,19 @@ a.list-group-item-danger.active:focus {
   border-top-color: #ebccd1;
 }
 .panel-danger > .panel-footer + .panel-collapse .panel-body {
-  border-bottom-color: #ebccd1;
+  
 }
 .well {
-  min-height: 20px;
-  padding: 19px;
+/*  min-height: 350px;
+  min-width: inherit;
+  padding: 0px;
   margin-bottom: 20px;
-  background-color: #D5BAD3;
+  background-color: @secondColor;
   border: 1px solid #e3e3e3;
-  border-radius: 4px;
+  border-radius: 90px;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
           box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
-}
+*/}
 .well blockquote {
   border-color: #ddd;
   border-color: rgba(0, 0, 0, .15);
