--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -9,9 +9,9 @@
         <h5>Produts<span class="caret"></span></h5>
         </a>
         <ul id="test3" class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu">
-          <li><a  href="about.html"><h5>About Us</h5></a></li>
-          <li><a  href="service.html"><h5>Management Team</h5></a></li>
-          <li><a  href="#"><h5>Careers</h5></a></li>
+          <li><a  href="http://navaratan.com/home/aboutus"><h5>About Us</h5></a></li>
+          <li><a  href="http://navaratan.com/home/services"><h5>Services</h5></a></li>
+          <li><a  href="http://navaratan.com/home/careers"><h5>Careers</h5></a></li>
         </ul>
       </li>
     </ul>
